--- a/styles.css
+++ b/styles.css
@@ -1,80 +1,82 @@
-h1{
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 2em;
-    font-weight: lighter;
-    color: rgb(157, 206, 173);
-}
-
 body{
-    font-family: 'Courier New', Courier, monospace;
-    background: linear-gradient(to right, rgb(240, 243, 241), rgb(247, 248, 247));
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    line-height: 1.6;
+    color: black;
+    background-color: rgb(247, 237, 234);
     margin: 0;
     padding: 0;
-    color: #010000;
+    max-width: 1200px;
 }
 
-.hero-container{
-    text-align: center;
-}
-.hero-image{
-    width: 95%;
-    height: 500px;
-}
-
-.logo{
-    display: block;
-    justify-content: left;
-    align-items: center;
-    margin-top:20px;
+/*typoography*/
+h1,h2{
+    font-family: lucida Console, monospace;
+    color: rgb(36, 20, 4);
+    line-height: 1.3;
+    margin-bottom: 0.5em;
 }
 
+p{
+    margin-bottom: 1em;
+    font-size: 1rem;
+    color: rgb(12, 8, 4);
+}
+
+
+/*header and navigation bar*/
 header{
-    background-color: rgba(65, 13, 3, 0.977);
-    padding: 20px;
-    text-align: center;
+    background-color: rgb(64, 12, 12);
+    height: 150%;
+    position: relative;
+}
+
+header .logo{
+    height: auto;
+    width: auto;
 }
 
 nav ul{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex; /*makes the list items align horizontally*/
-    justify-content: center; /*centers the list items*/
-    gap: 50px
-
-}
-
-.header-layout{
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 50px;
-    padding: 20px;
-}
-
-nav ul{
-    list-style: none;
-    display: flex;
-    gap: 50px;
-    margin: 0;
-    padding: 0;
+    justify-content: center;
+    gap: 2rem;
+    margin-top: 1rem;
+    flex-wrap: wrap;
 }
 
 nav a{
     text-decoration: none;
     color: black;
-    font-weight: bold;
-    font-size: 1.2em;
-    padding: 8px 12px;
+    font-weight: 800;
     transition: color 0.3s ease;
 }
 
 nav a:hover{
-    color: rgb(34, 96, 54);
+    background-color: rgb(18, 63, 28);
+
 }
 
-footer{
-    background-color: rgba(65, 13, 3, 0.977);
-    padding: 5px;
-    text-align: center;
+/*main section*/
+main{
+    margin: 2rem 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
 }
+
+section{
+    background: rgb(7, 65, 41);
+    padding: 1.5rem;
+    width: 100%;
+}
+
+/*footer section*/
+footer{
+    text-align: center;
+    background-color: rgb(64, 12, 12);
+    padding: 1.5rem;
+    margin-top: 2rem;
+    width: 110%;
+}
+
+
