--- a/styles.css
+++ b/styles.css
@@ -1,82 +1,14 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
-    line-height: 1.6;
-    color: black;
-    background-color: rgb(247, 237, 234);
+* {
     margin: 0;
     padding: 0;
-    max-width: 1200px;
+    box-sizing: border-box;
 }
 
-/*typoography*/
-h1,h2{
-    font-family: lucida Console, monospace;
-    color: rgb(36, 20, 4);
-    line-height: 1.3;
-    margin-bottom: 0.5em;
-}
-
-p{
-    margin-bottom: 1em;
+/*base style*/
+body{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif  ;
     font-size: 1rem;
-    color: rgb(12, 8, 4);
+    line-height: 1.6;
+    color: rgb(71, 8, 8);
+    background-color: rgb(246, 242, 242);
 }
-
-
-/*header and navigation bar*/
-header{
-    background-color: rgb(64, 12, 12);
-    height: 150%;
-    position: relative;
-}
-
-header .logo{
-    height: auto;
-    width: auto;
-}
-
-nav ul{
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-    margin-top: 1rem;
-    flex-wrap: wrap;
-}
-
-nav a{
-    text-decoration: none;
-    color: black;
-    font-weight: 800;
-    transition: color 0.3s ease;
-}
-
-nav a:hover{
-    background-color: rgb(18, 63, 28);
-
-}
-
-/*main section*/
-main{
-    margin: 2rem 0;
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 2rem;
-}
-
-section{
-    background: rgb(7, 65, 41);
-    padding: 1.5rem;
-    width: 100%;
-}
-
-/*footer section*/
-footer{
-    text-align: center;
-    background-color: rgb(64, 12, 12);
-    padding: 1.5rem;
-    margin-top: 2rem;
-    width: 110%;
-}
-
-
