--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,55 @@ h1, h2{
     font-style: italic ;
     font-weight: 400;
 }
+
+p{
+    font-family: monospace;
+    font-size: 1rem;
+    margin-bottom: 2rem;
+    margin-top: 0.5rem;
+    font-weight: lighter;
+}
+
+/*layout of the header, footer and main section*/
+header, main, footer{
+    max-width: 1200px;
+    margin: auto;
+}
+
+.logo{
+    display: inline;
+    margin: 0;
+    width: 5%;
+    height: 5%;
+
+}
+
+header{
+    text-align: center;
+    font-style: normal;
+    font-weight: bold;
+    margin-top: 0.5em;
+    background-color: rgb(71, 8, 8);
+    color: #000;
+    align-items: center;
+}
+
+/*navigation*/
+nav ul{
+    display: flex;
+    justify-content: center ;
+    gap: 5em;
+    list-style: none;
+    margin-top: 1em;
+}
+
+nav a{
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: 0.3 ease;
+}
+
+nav a:hover{
+    color: rgb(17, 66, 46);
+}
