--- a/styles.css
+++ b/styles.css
@@ -162,4 +162,51 @@ footer{
 #products{
     background-image: none;
     padding-left: 25px;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    padding: 2rem;
+    max-width: 1000%;
+    margin:auto;
 }
+
+
+#products section{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
+}
+#products section > article{
+    display: inline-block;
+    vertical-align: top;
+    width: calc(50% - 1rem); /*twp products per row with spacing*/
+    margin: 0.5rem;
+    background-color: #fdf6f0;
+    padding: 1rem;
+    border-radius:10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+
+#products figure img{
+    width: 100%;
+    max-width: 250px;
+    height: auto;
+    border-radius: 8px;
+}
+#products figcaption{
+    margin-top: 0.5rem;
+    font-style: italic;
+    color: #db5f5f;
+}
+#products p{
+    font-weight: bold;
+    margin-top: 1rem;
+    font-size: 1.1rem;
+    color: #2e2e2e;
+}
+
+
+
