--- a/styles.css
+++ b/styles.css
@@ -356,9 +356,7 @@ main#about section{
     background-color: rgb(71, 8, 8);
 }
 
-/* --------------------
-   REVIEWS PAGE
--------------------- */
+/*Reviews page */
 #reviews {
     background-image: none;
 }
@@ -468,4 +466,77 @@ main#about section{
 #reviews article footer p {
     font-size: 0.875rem;
     color: rgb(107, 141, 127);
+}
+
+/*Responsive braekpoints */
+/*For phones up to 430px wide*/
+@media(max-width:430px){
+    body{
+        font-size: 0.9rem;
+    }
+    h1,h2{
+        font-size: 2rem;
+    }
+    .hero{
+        padding: 2rem 1rem;
+        min-height: 80%;
+    }
+    #topLinks ul, #bottomLinks ul{
+        flex-direction: column;
+        gap: 1rem;
+    }
+    #products section{
+        flex-direction: column;
+        align-items: centre;
+    }
+    #products section> article{
+        width: 100%;
+        max-width: 20rem;
+    }
+}
+
+/*Tablets or wider screens*/
+@media(min-width:431px) and (max-width: 1024px){
+    body{
+        font-size: 1rem;
+    }
+    .hero h1{
+        font-size: 2.5rem;
+    }
+    .hero p{
+        font-size: 1.1rem;
+    }
+    #products section{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    #products section> article{
+        flex: 1.1 45%;
+        max-width: 22rem;
+    }
+
+}
+
+/*Desktops screens*/
+@media(mim-width:1025px){
+    body{
+        font-size: 1.2rem;
+    }
+    .hero{
+        padding: 6rem 2rem;
+        min-height: 100%;
+    }
+    #products section{
+        justify-content: space-between;
+        gap:2rem;
+    }
+    #products section> article{
+        flex: 1 1 30%;
+        max-width: 25rem;
+    }
+    main#about{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 2rem;
+    }
 }
